force-app/main/default/objects/Assessment_Result__c/Assessment_Result__c.object-meta.xml
<CustomObject>
    <label>Assessment Result</label>
    <nameField>
        <label>Assessment Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>