force-app/main/default/objects/Assessment_Result__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Assessment Results</relationshipLabel>
    <relationshipName>Assessment_Results</relationshipName>
    <type>Lookup</type>
</CustomField>