force-app/main/default/objects/Assessment_Result__c/fields/Submission__c.field-meta.xml
<CustomField>
    <fullName>Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission</label>
    <referenceTo>Submission__c</referenceTo>
    <relationshipLabel>Assessment Results</relationshipLabel>
    <relationshipName>Assessment_Results</relationshipName>
    <type>Lookup</type>
</CustomField>